我现在在处理一个线上的紧急bug

--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,7 @@ spring.application.name=ZuulGateWay
 eureka.client.service-url.defaultZone=http://eureka1001:1001/eureka/,http://eureka1002:1002/eureka/,http://eureka1003:1003/eureka/
 eureka.instance.instance-id=zuul.com
 eureka.instance.prefer-ip-address=true
+
+
+
+我现在是一个分支哈哈哈2019-11-8 22:43:33
