我是张三，我现在修改了属性文件哈哈哈

--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,13 @@ eureka.instance.prefer-ip-address=true
 
 
 我现在是一个分支哈哈哈2019-11-8 22:43:33
+
+
+
+
+
+
+
+
+
+不好意思，我是张三，我现在需要修改一下文件，哈哈哈2019-11-9 12:41:42
